Initial upgrade process support (#4954)
* Initial upgrade process support

* Improve test assertions

* Fix labels and properties management

* Move the data upgrade process to the v2 endpoint and improve references management

* Improve test assertions

* Add back migration tests